# herencia-y-polimorfismo

./: CMakeLists.txt  README.md
src/: Board.cpp  Board.h  Dice.cpp  Dice.h  LadderTile.cpp  LadderTile.h  NormalTile.cpp  NormalTile.h  Player.cpp  Player.h  SnakeTile.cpp  SnakeTile.h  Tile.cpp  Tile.h  main.cpp
