cmake_minimum_required(VERSION 4.0)
project(HerenciaPolimorfismo)

set(CMAKE_CXX_STANDARD 20)


add_executable(main.out src/main.cpp
        src/main.cpp
        src/Dice.cpp
        src/Dice.h
        src/Player.cpp
        src/Player.h
        src/Board.cpp
        src/Board.h
        src/tile.cpp
        src/tile.h)